--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<!-- Para correr el proyecto usar-> npm run start -->
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proidea</title>
